k8-templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - kubernetes.local
    secretName: cryptosecret-tls
  rules:
  - host: kubernetes.local
    http:
      paths:
        - path: /view
          backend:
            serviceName: charts-service
            servicePort: 80
  - host: webinterface.kubernetes.local
    http:
        paths:
        - backend:
            serviceName: webserver-service
            servicePort: 8888
  - host: phpmyadmin.kubernetes.local
    http:
        paths:
        - backend:
            serviceName: phpmyadmin
            servicePort: 808
